<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="321dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        app:srcCompat="@drawable/registr" />

    <EditText
        android:id="@+id/Surname"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:hint="@string/Kullanici_adiniz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Mail"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:hint="@string/e_postaniz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:hint="@string/sifreniz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/Number"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:hint="@string/numaraniz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.659"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Registergiris"

        android:layout_width="270dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonuc"
        android:text="@string/devam_et"
        android:textColor="#5AC3FA"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>